--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "goals-todos-api": "^1.0.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-scripts": "2.1.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
